--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
 - standard/gateway.networking.k8s.io_gatewayclasses.yaml
 - standard/gateway.networking.k8s.io_gateways.yaml
-- standard/gateway.networking.k8s.io_httproutes.yaml
+- experimental/gateway.networking.k8s.io_httproutes.yaml
